compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__custom_types__imported_multiple_fields.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "import other\npub fn main() {\n  other.Two(b: 2, c: 3, a: 1)\n}"
---
let
  other' = builtins.import ./../other.nix;
  
  main = {}: other'.Two 1 2 3;
in { inherit main; }
