compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__custom_types__long_name_variant_without_labels.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "\ntype TypeWithALongNameAndSeveralArguments{\n  TypeWithALongNameAndSeveralArguments(String, String, String, String, String)\n}\n\n\nfn go() {\n  TypeWithALongNameAndSeveralArguments\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

type TypeWithALongNameAndSeveralArguments{
  TypeWithALongNameAndSeveralArguments(String, String, String, String, String)
}


fn go() {
  TypeWithALongNameAndSeveralArguments
}


----- COMPILED NIX
let
  TypeWithALongNameAndSeveralArguments =
    x0: x1: x2: x3: x4:
      {
        __gleamTag = "TypeWithALongNameAndSeveralArguments";
        _0 = x0;
        _1 = x1;
        _2 = x2;
        _3 = x3;
        _4 = x4;
      };
  
  go = { }: TypeWithALongNameAndSeveralArguments;
in
{ }
