compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__custom_types__qualified.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "import other\n\npub fn main() {\n  other.One\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
import other

pub fn main() {
  other.One
}


----- COMPILED NIX
let
  other' = builtins.import ./../other.nix;
  
  main = { }: other'.One;
in
{ inherit main; }
