compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__custom_types__types_must_be_rendered_before_functions.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "\npub fn one() { One }\npub type One { One }\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn one() { One }
pub type One { One }


----- COMPILED NIX
let One = { __gleamTag = "One"; }; one = { }: One; in { inherit One one; }
